Update: adicionado sistema de streams

--- a/resources/color/default.css
+++ b/resources/color/default.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
     --color-text:            rgb(233, 244, 251);
     --color-background:      rgb(6, 9, 15);
     --color-header:          rgb(237, 0, 73);
@@ -17,4 +17,4 @@
     --color-button_remove:   rgb(65, 19, 40);
     --color-button_remove_h: rgb(157, 0, 73);
     --color-button_remove_b: rgb(247, 0, 77);
-} */
+}
